# Industrial_AI

./: .gitignore  .gitmodules  4.10.py  4.2.1.py  4.3.2 수치 미분.py  6.1.8 Minist.py  6.2.py  6.3.배치 정규화.py  README.md  optimizer2.py  optimizer_compare_mnist.py  sigmoid ch03.py  untitled0.py  untitled1.py
Cheongju-bus-anomaly-detection/: README.md
Portfolio-DeepLearning-Fundamentals/: FINAL_REPORT.md  README.md
Portfolio-OpenCV/: Readme.md
Portfolio-ai4i_2020_predictive_maintenance/: DEBUG_REPORT.md  F1_IMPROVEMENT_SUMMARY.md  README.md  Readme.md  ai4i_f1_improvement_notebook.py  requirements.txt  step1_eda.py  step2_data_prep.py  step3_train_model.py  step4_inference.py
Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/: CHECKLIST.md  README.md  README_backup.md  pyproject.toml  requirements.txt
Portfolio-제조데이터 분석 최적화/: README.md  lifecycle_optimized_dataset.csv  main.py  manufacturing_sensor_data.csv  raw_sensor_dataset.csv  requirements.txt  result_report.md  verified_sensor_dataset.csv  (+1 more)
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/: CHECKLIST.md  README_backup.md  pyproject.toml  requirements.txt  requirements_no_sklearn.txt
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/.github/workflows/: test.yml
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/configs/: default.yaml
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/docs/: architecture.md
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/notebooks/: 01_eda.ipynb  02_labeling_logic.ipynb
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/results/: analysis_report.md  final_report.md  label_distribution.csv
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/scripts/: run_labeling_and_save.py  save_analysis_results.py
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/src/: __init__.py
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/src/data_loader/: loader.py
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/src/evaluation/: metrics.py
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/src/features/: feature_engineering.py
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/src/labeling/: __init__.py  labeling.py
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/src/models/: baseline.py
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/src/preprocessing/: clean.py
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/src/visualization/: plots.py
공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/Portfolio-공유 물류센터 안전 관리 시스템 개선 프로젝트 실습/tests/: test_labeling.py
(+335 files in other folders)
