[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-facility-safety-system"
version = "0.1.0"
description = "Rule-based anomaly detection system for shared logistics centers and factories using real sensor data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Portfolio", email = "portfolio@shared-facility.org"}
]
keywords = [
    "anomaly-detection",
    "shared-facility",
    "logistics-center",
    "sensor-data",
    "safety-monitoring"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "jupyter>=1.0.0",
    "pyyaml>=6.0",
    "pytest>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/songgongho/Industrial_AI"
Documentation = "https://github.com/songgongho/Industrial_AI/blob/main/README.md"
Repository = "https://github.com/songgongho/Industrial_AI"
Issues = "https://github.com/songgongho/Industrial_AI/issues"

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "pytest-cov>=4.0",
    "ipython>=8.0",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["labeling/*.py", "data_loader/*.py", "preprocessing/*.py", "features/*.py", "models/*.py", "evaluation/*.py", "visualization/*.py"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

